# -HMI_CAR

./: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/8e1ee61ca25f41ca0bab49a709d0926d/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
android/: local.properties
assets/: mock_data.json
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: app.dart  main.dart  main_screen.dart
lib/app/: app.dart
lib/core/utils/: format_time.dart
lib/features/: main_screen.dart
lib/features/home/: home_page.dart
lib/features/media/: media_page.dart
lib/home_app/: home_page.dart
lib/home_app/services/: media_data_service.dart  mock_data_service.dart
lib/media_app/: media_page.dart
lib/phone_app/: phone_page.dart
lib/services/: media_data_service.dart  mock_data_service.dart
linux/: CMakeLists.txt  my_application.cc
services/media_service/: CMakeLists.txt  USBServiceEngine.cpp  USBServiceEngine.h  main.cpp
services/media_service/device/usb/: USBDevice.cpp  USBDevice.h  USBDeviceProvider.cpp  USBDeviceProvider.h
services/media_service/player/: USBBrowser.cpp  USBBrowser.h  USBData.h  USBPlayer.cpp  USBPlayer.h
(+71 files in other folders)
